<resources>
    <string name="app_name">Best Driver</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>

    <string name="detected_activities_title">Detected Activities</string>

    <string name="request_activity_updates">Request updates</string>
    <string name="remove_activity_updates">Remove updates</string>
    <string name="activity_updates_added">Activity updates added</string>
    <string name="activity_updates_removed">Activity updates removed</string>

    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_activity_main">Home</string>

    <string name="Distance">DISTANCES:</string>
    <string name="Passenger">DISABLE ACTIVITY RECOGNITION:</string>

    <string name="SafeDrivingHeader"><b>SAFE DRIVING MODE</b></string>
    <string name="EnableSafeDriving">Enabling safe driving mode suppresses all alerts and notifications until the accelerometer detects that you are no longer driving.</string>
    <string name="Notice"><u>NOTICE:</u> \nDriving metrics are recorded in Safe Driving Mode only.</string>
    <string name="Remember"><u>REMEMBER:</u> \nTo stop this page from popping up - go to Settings from the Home Page and enable I\'m a Passenger.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_safe_drive_prompt">SafeDrivePrompt</string>
    <string name="title_activity_supressed_summary">SupressedSummary</string>
    <string name="title_activity_user_driving_points">UserDrivingPoints</string>
    <string name="title_activity_incoming_call">IncomingCallActivity</string>

    <string name="msg">Please enable all permission</string>
</resources>
