<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/request_activity_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="requestActivityUpdatesButtonHandler"
            android:text="@string/request_activity_updates" />

        <Button
            android:id="@+id/remove_activity_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/request_activity_updates_button"
            android:layout_toEndOf="@id/request_activity_updates_button"
            android:onClick="removeActivityUpdatesButtonHandler"
            android:text="@string/remove_activity_updates" />
    </RelativeLayout>

    <TextView
        android:id="@+id/detected_activities_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detected_activities_title"
        />

    <ListView
        android:id="@+id/detected_activities_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>