<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/observatoryGreen"
    tools:context="chrisdurning.bestdriver.SafeDrivePrompt">

    <com.skyfishjy.library.RippleBackground
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        app:rb_color="@color/greenish"
        app:rb_radius="32dp"
        app:rb_rippleAmount="4"
        app:rb_duration="3000"
        app:rb_scale="7"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/thinborder"
            android:padding="15dp"
            android:id="@+id/relativeLayout"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp">

            <ImageView
                android:id="@+id/belt_icon"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/bigman"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/enable_safe_driving_mode_header"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/yellowStench"
                android:text="@string/SafeDrivingHeader"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/belt_icon"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/EnableSafeDriving"
                android:textSize="15sp"
                android:textColor="@color/yellowStench"
                android:id="@+id/enable_safe_driving_notice"
                android:layout_marginTop="160dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/enable_safe_driving_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="15dp"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/red"
            fancy:fb_focusColor="@color/yellowStench"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="5dp"
            fancy:fb_text="Enable Safe Driving Mode"
            fancy:fb_textColor="@color/white"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerHorizontal="true" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/not_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="#ffffff"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/observatoryGreen"
            fancy:fb_focusColor="@color/white"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="5dp"
            fancy:fb_text="Not Now"
            fancy:fb_textColor="#ffffff"
            android:layout_marginTop="7dp"
            android:layout_below="@id/enable_safe_driving_mode"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Remember"
            android:textColor="@color/metallicSilver"
            android:textSize="13sp"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </com.skyfishjy.library.RippleBackground>

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="13sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"/>
</RelativeLayout>
